--- a/MultiRocket-3/index.html
+++ b/MultiRocket-3/index.html
@@ -69,9 +69,23 @@
             <!-- </div> -->
             <div v-if="point == 3" style="margin: 300px;">
                 <div v-for="i in 2" style="display: inline-block; margin-right: 30px;">
-                    <img class="img_mini" :src="data.bodies[point].moons[0].img">
-                    <br> Name:{{data.bodies[point].moons[0].name}}
-                    <br> Gravity:{{data.bodies[point].moons[0].gravity}} m.s <sup>-2</sup>
+                    <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
+                    <br> Name:{{data.bodies[point].moons[i-1].name}}
+                    <br> Gravity:{{data.bodies[point].moons[i-1].gravity}} m.s <sup>-2</sup>
+                </div>
+            </div>
+            <div v-if="point == 4" style="margin: 300px;">
+                <div v-for="i in 14" style="display: inline-block; margin-right: 30px;">
+                    <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
+                    <br> Name:{{data.bodies[point].moons[i-1].name}}
+                    <br> Gravity:{{data.bodies[point].moons[i-1].gravity}} m.s <sup>-2</sup>
+                </div>
+            </div>
+            <div v-if="point == 7" style="margin: 300px;">
+                <div v-for="i in 3" style="display: inline-block; margin-right: 30px;">
+                    <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
+                    <br> Name:{{data.bodies[point].moons[i-1].name}}
+                    <br> Gravity:{{data.bodies[point].moons[i-1].gravity}} m.s <sup>-2</sup>
                 </div>
             </div>
             <br>
