--- a/MultiRocket-3/index.html
+++ b/MultiRocket-3/index.html
@@ -63,8 +63,9 @@
             <!-- <div class="planet"> -->
             <div v-if="point == 2" style="margin: 300px;">
                 <img class="img_mini" :src="data.bodies[point].moons[0].img">
-                <br> Name:{{data.bodies[point].moons[0].name}}
-                <br> Gravity:{{data.bodies[point].moons[0].gravity}} m.s <sup>-2</sup>
+                <br> Name: {{data.bodies[point].moons[0].name}}
+                <br> Gravity: {{data.bodies[point].moons[0].gravity}} m.s <sup>-2</sup>
+                <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[0].gravity)}} kg.
             </div>
             <!-- </div> -->
             <div v-if="point == 3" style="margin: 300px;">
@@ -72,6 +73,7 @@
                     <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
                     <br> Name:{{data.bodies[point].moons[i-1].name}}
                     <br> Gravity:{{data.bodies[point].moons[i-1].gravity}} m.s <sup>-2</sup>
+                    <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[i-1].gravity)}} kg.
                 </div>
             </div>
             <div v-if="point == 4" style="margin: 300px;">
@@ -79,6 +81,7 @@
                     <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
                     <br> Name:{{data.bodies[point].moons[i-1].name}}
                     <br> Gravity:{{data.bodies[point].moons[i-1].gravity}} m.s <sup>-2</sup>
+                    <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[i-1].gravity)}} kg.
                 </div>
             </div>
             <div v-if="point == 7" style="margin: 300px;">
@@ -86,6 +89,7 @@
                     <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
                     <br> Name:{{data.bodies[point].moons[i-1].name}}
                     <br> Gravity:{{data.bodies[point].moons[i-1].gravity}} m.s <sup>-2</sup>
+                    <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[i-1].gravity)}} kg.
                 </div>
             </div>
             <br>
