--- a/MultiRocket-3/index.html
+++ b/MultiRocket-3/index.html
@@ -60,40 +60,40 @@
 
 
             <!-- ว่าจะทำลูก -->
-            <!-- <div class="planet"> -->
-            <div v-if="point == 2" style="margin: 300px;">
-                <img class="img_mini" :src="data.bodies[point].moons[0].img">
-                <br> Name: {{data.bodies[point].moons[0].name}}
-                <br> Gravity: {{data.bodies[point].moons[0].gravity}} m.s <sup>-2</sup>
-                <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[0].gravity)}} kg.
-            </div>
-            <!-- </div> -->
-            <div v-if="point == 3" style="margin: 300px;">
-                <div v-for="i in 2" style="display: inline-block; margin-right: 30px;">
-                    <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
-                    <br> Name:{{data.bodies[point].moons[i-1].name}}
-                    <br> Gravity:{{data.bodies[point].moons[i-1].gravity}} m.s <sup>-2</sup>
-                    <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[i-1].gravity)}} kg.
+
+            <div style="margin-top: 350px; margin-bottom: 100px;">
+                <div v-if="point == 2">
+                    <img class="img_mini" :src="data.bodies[point].moons[0].img">
+                    <br> Name: {{data.bodies[point].moons[0].name}}
+                    <br> Gravity: {{data.bodies[point].moons[0].gravity}} m.s <sup>-2</sup>
+                    <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[0].gravity)}} kg.
                 </div>
-            </div>
-            <div v-if="point == 4" style="margin: 300px;">
-                <div v-for="i in 14" style="display: inline-block; margin-right: 30px;">
-                    <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
-                    <br> Name:{{data.bodies[point].moons[i-1].name}}
-                    <br> Gravity:{{data.bodies[point].moons[i-1].gravity}} m.s <sup>-2</sup>
-                    <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[i-1].gravity)}} kg.
+                <div v-if="point == 3">
+                    <div v-for="i in 2" style="display: inline-block; margin-right: 30px;">
+                        <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
+                        <br> Name:{{data.bodies[point].moons[i-1].name}}
+                        <br> Gravity:{{data.bodies[point].moons[i-1].gravity}} m.s <sup>-2</sup>
+                        <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[i-1].gravity)}} kg.
+                    </div>
                 </div>
-            </div>
-            <div v-if="point == 7" style="margin: 300px;">
-                <div v-for="i in 3" style="display: inline-block; margin-right: 30px;">
-                    <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
-                    <br> Name:{{data.bodies[point].moons[i-1].name}}
-                    <br> Gravity:{{data.bodies[point].moons[i-1].gravity}} m.s <sup>-2</sup>
-                    <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[i-1].gravity)}} kg.
+                <div v-if="point == 4">
+                    <div v-for="i in 14" style="display: inline-block; margin-right: 30px;">
+                        <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
+                        <br> Name:{{data.bodies[point].moons[i-1].name}}
+                        <br> Gravity:{{data.bodies[point].moons[i-1].gravity}} m.s <sup>-2</sup>
+                        <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[i-1].gravity)}} kg.
+                    </div>
+                </div>
+                <div v-if="point == 7">
+                    <div v-for="i in 3" style="display: inline-block; margin-right: 30px;">
+                        <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
+                        <br> Name:{{data.bodies[point].moons[i-1].name}}
+                        <br> Gravity:{{data.bodies[point].moons[i-1].gravity}} m.s <sup>-2</sup>
+                        <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[i-1].gravity)}} kg.
+                    </div>
                 </div>
             </div>
             <br>
-
 
 
 
