ใส่ภาพขึ้นขึ้นละ

--- a/MultiRocket-3/index.html
+++ b/MultiRocket-3/index.html
@@ -77,7 +77,8 @@
             </div>
 
             <button class="again" @click="change_status()">RESTART</button><br>
-            <div class="human" id="human" >PRESS Spacebar</div>
+            <!-- <div class="human" id="human" >PRESS Spacebar</div> -->
+            <img src="Artboard 322.png" class="human" id="human">
 
             <!-- แถวดาวเคราะห์ -->
             <div v-for="i in 8" style="height: 0px; font-family: 'Neucha', cursive; font-size: 24px">
