--- a/MultiRocket-3/index.html
+++ b/MultiRocket-3/index.html
@@ -110,37 +110,37 @@
 
             <div style="margin-top: 350px; margin-bottom: 100px; font-family: 'Patrick Hand', cursive; font-size: 18px">
                 <!-- EARTH -->
-                <div v-if="point == 2">
-                    <img class="img_mini" :src="data.bodies[point].moons[0].img">
-                    <br> Name: {{data.bodies[point].moons[0].name}}
-                    <br> Gravity: {{data.bodies[point].moons[0].gravity}} m.s <sup>-2</sup>
-                    <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[0].gravity)}} kg.
+                <div v-if="data.bodies[point_data[point]].name == 'Earth'">
+                    <img class="img_mini" :src="data.bodies[point_data[point]].moons[0].img">
+                    <br> Name: {{data.bodies[point_data[point]].moons[0].name}}
+                    <br> Gravity: {{data.bodies[point_data[point]].moons[0].gravity}} m.s <sup>-2</sup>
+                    <br> Weight on Planet: {{calculate_weight(data.bodies[point_data[point]].moons[0].gravity)}} kg.
                 </div>
                 <!-- Mars -->
-                <div v-if="point == 3">
+                <div v-if="data.bodies[point_data[point]].name == 'Mars'">
                     <div v-for="i in 2" style="display: inline-block; margin-right: 30px;">
-                        <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
-                        <br> Name:{{data.bodies[point].moons[i-1].name}}
-                        <br> Gravity:{{data.bodies[point].moons[i-1].gravity}} m.s <sup>-2</sup>
-                        <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[i-1].gravity)}} kg.
+                        <img class="img_mini" :src="data.bodies[point_data[point]].moons[i-1].img">
+                        <br> Name:{{data.bodies[point_data[point]].moons[i-1].name}}
+                        <br> Gravity:{{data.bodies[point_data[point]].moons[i-1].gravity}} m.s <sup>-2</sup>
+                        <br> Weight on Planet: {{calculate_weight(data.bodies[point_data[point]].moons[i-1].gravity)}} kg.
                     </div>
                 </div>
                 <!-- Jupiter -->
-                <div v-if="point == 4">
+                <div v-if="data.bodies[point_data[point]].name == 'Jupiter'">
                     <div v-for="i in 14" style="display: inline-block; margin-right: 30px;">
-                        <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
-                        <br> Name:{{data.bodies[point].moons[i-1].name}}
-                        <br> Gravity:{{data.bodies[point].moons[i-1].gravity}} m.s <sup>-2</sup>
-                        <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[i-1].gravity)}} kg.
+                        <img class="img_mini" :src="data.bodies[point_data[point]].moons[i-1].img">
+                        <br> Name:{{data.bodies[point_data[point]].moons[i-1].name}}
+                        <br> Gravity:{{data.bodies[point_data[point]].moons[i-1].gravity}} m.s <sup>-2</sup>
+                        <br> Weight on Planet: {{calculate_weight(data.bodies[point_data[point]].moons[i-1].gravity)}} kg.
                     </div>
                 </div>
                 <!-- Neptune -->
-                <div v-if="point == 7">
+                <div v-if="data.bodies[point_data[point]].name == 'Neptune'">
                     <div v-for="i in 3" style="display: inline-block; margin-right: 30px;">
-                        <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
-                        <br> Name:{{data.bodies[point].moons[i-1].name}}
-                        <br> Gravity:{{data.bodies[point].moons[i-1].gravity}} m.s <sup>-2</sup>
-                        <br> Weight on Planet: {{calculate_weight(data.bodies[point].moons[i-1].gravity)}} kg.
+                        <img class="img_mini" :src="data.bodies[point_data[point]].moons[i-1].img">
+                        <br> Name:{{data.bodies[point_data[point]].moons[i-1].name}}
+                        <br> Gravity:{{data.bodies[point_data[point]].moons[i-1].gravity}} m.s <sup>-2</sup>
+                        <br> Weight on Planet: {{calculate_weight(data.bodies[point_data[point]].moons[i-1].gravity)}} kg.
                     </div>
                 </div>
             </div>
