--- a/MultiRocket-3/index.html
+++ b/MultiRocket-3/index.html
@@ -9,9 +9,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="text-white">
 
     <center>
         <div id="app">
@@ -66,13 +68,14 @@
             </div>
             <!-- หน้าป๊อปอัพบังคับกรอกข้อมูล -->
             <div class="text">
-                <h1>Planet : {{data.bodies[point_data[point]].name}}</h1>
-                <!--ชื่อดาว-->
-                <h1>Gravity : {{data.bodies[point_data[point]].gravity}} m.s <sup>-2</sup> </h1>
-                <!--แรงโน้มถ่วง-->
-                <h1>Name : {{name}}</h1>
-                <!--ชื่อผู้ใช้-->
-                <h1>Weight on Planet : {{calculate_weight(data.bodies[point_data[point]].gravity)}} kg.</h1><br>
+                <h1>
+                    <a>Planet : {{data.bodies[point_data[point]].name}}</a>
+                    <!--ชื่อดาว-->
+                    <a>Gravity : {{data.bodies[point_data[point]].gravity}} m.s <sup>-2</sup> </a>
+                    <!--แรงโน้มถ่วง-->
+                    <a>Name : {{name}}</a>
+                    <!--ชื่อผู้ใช้-->
+                    <a>Weight on Planet : {{calculate_weight(data.bodies[point_data[point]].gravity)}} kg.</h1><br></a>
                 <!--น้ำหนักบนดาวเคราะห์นั้นๆ-->
             </div>
 
@@ -157,6 +160,8 @@
             <!-- แถบปุ่มดาวเคราะห์ -->
 
             <!-- ปุ่มรูปแบบการเรียง -->
+            <p></p>
+            <p></p>
             <div>
                 <h1 v-if="status_sort" style="font-family: 'Neucha', cursive">Sort By Solar</h1>
                 <h1 v-else>Sort By Gravity</h1>
