--- a/MultiRocket-3/index.html
+++ b/MultiRocket-3/index.html
@@ -9,8 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+        crossorigin="anonymous">
 </head>
 
 <body class="text-white">
@@ -69,15 +70,59 @@
             </div>
             <!-- หน้าป๊อปอัพบังคับกรอกข้อมูล -->
             <div class="text">
-                <h1>
-                    <a>Planet : {{data.bodies[point_data[point]].name}}</a>
-                    <!--ชื่อดาว-->
-                    <a>Gravity : {{data.bodies[point_data[point]].gravity}} m.s <sup>-2</sup> </a>
-                    <!--แรงโน้มถ่วง-->
-                    <a>Name : {{name}}</a>
-                    <!--ชื่อผู้ใช้-->
-                    <a>Weight on Planet : {{calculate_weight(data.bodies[point_data[point]].gravity)}} kg.</h1><br></a>
-                <!--น้ำหนักบนดาวเคราะห์นั้นๆ-->
+                <table class="container_table">
+                    <tr>
+                        <th>
+                            <h3>
+                                <p>Planet : </p>
+                            </h3>
+                            <!--ชื่อดาว-->
+                        </th>
+                        <td>
+                            {{data.bodies[point_data[point]].name}}
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            <h3>
+                                <p>Gravity : </p>
+                            </h3>
+
+                            <!--แรงโน้มถ่วง-->
+                        </th>
+                        <td>
+                            {{data.bodies[point_data[point]].gravity}} m.s <sup>-2</sup>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>
+                            <h3>
+                                <p>Name : </p>
+                            </h3>
+
+                            <!--ชื่อผู้ใช้-->
+                        </th>
+                        <td>{{name}}</td>
+                    </tr>
+                    <tr>
+                        <th>
+                            <h3>
+                                <p>Weight on Planet : </p>
+                            </h3>
+
+                            <!--น้ำหนักบนดาวเคราะห์นั้นๆ-->
+                        </th>
+                        <td>
+                            {{calculate_weight(data.bodies[point_data[point]].gravity)}} kg.
+                        </td>
+                    </tr>
+
+
+
+
+
+                </table>
+
             </div>
 
             <button class="again" @click="change_status()">RESTART</button><br>
@@ -109,50 +154,93 @@
 
 
 
-
-            <!-- ว่าจะทำลูก -->
-
             <div style="margin-top: 350px; margin-bottom: 100px; font-family: 'Patrick Hand', cursive; font-size: 18px">
                 <!-- EARTH -->
-                <div v-if="data.bodies[point_data[point]].name == 'Earth'">
-                    <img class="img_mini" :src="data.bodies[point_data[point]].moons[0].img">
-                    <br> Name: {{data.bodies[point_data[point]].moons[0].name}}
-                    <br> Gravity: {{data.bodies[point_data[point]].moons[0].gravity}} m.s <sup>-2</sup>
-                    <br> Weight on Planet: {{calculate_weight(data.bodies[point_data[point]].moons[0].gravity)}} kg.
+                <div v-if="point == 2">
+                    <img class="img_mini" :src="data.bodies[point].moons[0].img">
+                    <center>
+                        <table class="rwd-table">
+                            <tr>
+                                <th>Name of Earth</th>
+                                <th>Gravity m.s <sup>-2</sup></th>
+                                <th>Weight on Planet</th>
+                            </tr>
+                            <tr class="inform_1">
+                                <td data-th="name">{{data.bodies[point].moons[0].name}}</td>
+                                <td data-th="gravity">{{data.bodies[point].moons[0].gravity}} m.s </td>
+                                <td data-th="weight">{{calculate_weight(data.bodies[point].moons[0].gravity)}} kg.</td>
+                            </tr>
+                        </table>
+                    </center>
+
                 </div>
                 <!-- Mars -->
-                <div v-if="data.bodies[point_data[point]].name == 'Mars'">
+                <div v-if="point == 3">
                     <div v-for="i in 2" style="display: inline-block; margin-right: 30px;">
-                        <img class="img_mini" :src="data.bodies[point_data[point]].moons[i-1].img">
-                        <br> Name:{{data.bodies[point_data[point]].moons[i-1].name}}
-                        <br> Gravity:{{data.bodies[point_data[point]].moons[i-1].gravity}} m.s <sup>-2</sup>
-                        <br> Weight on Planet: {{calculate_weight(data.bodies[point_data[point]].moons[i-1].gravity)}}
-                        kg.
+                        <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
+                        <center>
+                            <table class="rwd-table">
+                                <tr>
+                                    <th>Name of Mars</th>
+                                    <th>Gravity m.s <sup>-2</sup></th>
+                                    <th>Weight on Planet</th>
+                                </tr>
+                                <tr class="inform_2">
+                                    <td data-th="name">{{data.bodies[point].moons[i-1].name}}</td>
+                                    <td data-th="gravity">{{data.bodies[point].moons[i-1].gravity}}</td>
+                                    <td data-th="weight">{{calculate_weight(data.bodies[point].moons[i-1].gravity)}}
+                                        kg.</td>
+                                </tr>
+                            </table>
+                        </center>
                     </div>
                 </div>
                 <!-- Jupiter -->
-                <div v-if="data.bodies[point_data[point]].name == 'Jupiter'">
+                <div v-if="point == 4">
                     <div v-for="i in 14" style="display: inline-block; margin-right: 30px;">
-                        <img class="img_mini" :src="data.bodies[point_data[point]].moons[i-1].img">
-                        <br> Name:{{data.bodies[point_data[point]].moons[i-1].name}}
-                        <br> Gravity:{{data.bodies[point_data[point]].moons[i-1].gravity}} m.s <sup>-2</sup>
-                        <br> Weight on Planet: {{calculate_weight(data.bodies[point_data[point]].moons[i-1].gravity)}}
-                        kg.
+                        <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
+                        <center>
+                            <table class="rwd-table">
+                                <tr>
+                                    <th>Name of Jupiter</th>
+                                    <th>Gravity m.s <sup>-2</sup></th>
+                                    <th>Weight on Planet</th>
+                                </tr>
+                                <tr>
+                                <tr class="inform_3">
+                                    <td data-th="name">{{data.bodies[point].moons[i-1].name}}</td>
+                                    <td data-th="gravity">{{data.bodies[point].moons[i-1].gravity}}</td>
+                                    <td data-th="weight">{{calculate_weight(data.bodies[point].moons[i-1].gravity)}}
+                                        kg.</td>
+                                </tr>
+                            </table>
+                        </center>
                     </div>
                 </div>
                 <!-- Neptune -->
-                <div v-if="data.bodies[point_data[point]].name == 'Neptune'">
+                <div v-if="point == 7">
                     <div v-for="i in 3" style="display: inline-block; margin-right: 30px;">
-                        <img class="img_mini" :src="data.bodies[point_data[point]].moons[i-1].img">
-                        <br> Name:{{data.bodies[point_data[point]].moons[i-1].name}}
-                        <br> Gravity:{{data.bodies[point_data[point]].moons[i-1].gravity}} m.s <sup>-2</sup>
-                        <br> Weight on Planet: {{calculate_weight(data.bodies[point_data[point]].moons[i-1].gravity)}}
-                        kg.
+                        <img class="img_mini" :src="data.bodies[point].moons[i-1].img">
+                        <center>
+                            <table class="rwd-table">
+                                <tr>
+                                    <th>Name of Neptune</th>
+                                    <th>Gravity m.s <sup>-2</sup></th>
+                                    <th>Weight on Planet</th>
+                                </tr>
+                                <tr>
+                                <tr class="inform_4">
+                                    <td data-th="name">{{data.bodies[point].moons[i-1].name}}</td>
+                                    <td data-th="gravity">{{data.bodies[point].moons[i-1].gravity}} </td>
+                                    <td data-th="weight">{{calculate_weight(data.bodies[point].moons[i-1].gravity)}}
+                                        kg.</td>
+                                </tr>
+                            </table>
+                        </center>
                     </div>
                 </div>
             </div>
             <br>
-
 
 
 
