--- a/MultiRocket-3/index.html
+++ b/MultiRocket-3/index.html
@@ -56,7 +56,7 @@
                             </div>
 
                         </form>
-                        <button class="submit" @click="change_status()">SUBMIT</button>
+                        <button class="submit btn btn-body btn-lg text-white" @click="change_status()">SUBMIT</button>
 
                     </center>
                     <div class="lightning"></div>
@@ -125,7 +125,7 @@
 
             </div>
 
-            <button class="again" @click="change_status()">RESTART</button><br>
+            <button class="again btn btn-body btn-lg text-white" @click="change_status()">RESTART</button><br>
             <!-- <div class="human" id="human" >PRESS Spacebar</div> -->
             <img src="Artboard 322.png" class="human" id="human">
 
