--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                 <div class="mountain"></div>
 
 
-
                 <div class="popup-content">
                     <!--กรอกข้อมูล-->
                     <center>
@@ -68,61 +67,51 @@
 
             </div>
             <!-- หน้าป๊อปอัพบังคับกรอกข้อมูล -->
-            <div class="text">
-                <table class="container_table">
-                    <tr>
-                        <th>
-                            <h3>
-                                <p>Planet : </p>
-                            </h3>
-                            <!--ชื่อดาว-->
-                        </th>
+            <center>
+                <div class="text">
+                    <!-- <table class="container_table"> -->
+                    <table>
+                        <tr>
+                            <th>
+                                <h3>
+                                    <p>Planet</p>
+                                </h3>
+                                <!--ชื่อดาว-->
+                            </th>
+                            <th>
+                                <h3>
+                                    <p>Gravity</p>
+                                </h3>
+                                <!--แรงโน้มถ่วง-->
+                            </th>
+                            <th>
+                                <h3>
+                                    <p>Name </p>
+                                </h3>
+                                <!--ชื่อผู้ใช้-->
+                            </th>
+                            <th>
+                                <h3>
+                                    <p>Weight on Planet</p>
+                                </h3>
+                                <!--น้ำหนักบนดาวเคราะห์นั้นๆ-->
+                            </th>
+                        </tr>
                         <td>
                             {{data.bodies[point_data[point]].name}}
                         </td>
-                    </tr>
-                    <tr>
-                        <th>
-                            <h3>
-                                <p>Gravity : </p>
-                            </h3>
-
-                            <!--แรงโน้มถ่วง-->
-                        </th>
                         <td>
                             {{data.bodies[point_data[point]].gravity}} m.s <sup>-2</sup>
                         </td>
-                    </tr>
-                    <tr>
-                        <th>
-                            <h3>
-                                <p>Name : </p>
-                            </h3>
-
-                            <!--ชื่อผู้ใช้-->
-                        </th>
-                        <td>{{name}}</td>
-                    </tr>
-                    <tr>
-                        <th>
-                            <h3>
-                                <p>Weight on Planet : </p>
-                            </h3>
-
-                            <!--น้ำหนักบนดาวเคราะห์นั้นๆ-->
-                        </th>
+                        <td>
+                            {{name}}
+                        </td>
                         <td>
                             {{calculate_weight(data.bodies[point_data[point]].gravity)}} kg.
                         </td>
-                    </tr>
-
-
-
-
-
-                </table>
-
-            </div>
+                    </table>
+                </div>
+            </center>
 
             <button class="again btn btn-body btn-lg text-white" @click="change_status()">RESTART</button><br>
             <!-- <div class="human" id="human" >PRESS Spacebar</div> -->
@@ -271,109 +260,200 @@
     <div id='stars3'></div>
     <!-- ดาวใหญ่-->
 
+    <div id='stars4'></div>
+    <!-- ดาวเล็ก -->
+    <div id='stars5'></div>
+    <!-- ดาวกลาง-->
+    <div id='stars6'></div>
+    <!-- ดาวใหญ่-->
+
     <center>
-        <table>
-            <tr>
-                <th>
-                    <div class="view view-ninth">
-                        <img src="earth.jpg" style="width:300px;height:200px;" />
-                        <div class="mask mask-1"></div>
-                        <div class="mask mask-2"></div>
-                        <div class="content">
-                            <h2>Earth</h2>
-                            <p>The planet that we have lived</p>
+        <!-- <div class="table-responsive">
+            <table>
+                <tr>
+                    <th>
+                        <div class="view view-ninth">
+                            <img src="earth.jpg" style="width:300px;height:200px;" />
+                            <div class="mask mask-1"></div>
+                            <div class="mask mask-2"></div>
+                            <div class="content">
+                                <h2>Earth</h2>
+                                <p>The planet that we have lived</p>
 
+                            </div>
                         </div>
-                    </div>
-                </th>
-                <th>
-                    <div class="view view-ninth">
-                        <img src="venus.jpg" style="width:300px;height:200px;" />
-                        <div class="mask mask-1"></div>
-                        <div class="mask mask-2"></div>
-                        <div class="content">
-                            <h2>Venus</h2>
-                            <p>Venus has 90 times the atmospheric pressure of Earth</p>
+                    </th>
+                    <th>
+                        <div class="view view-ninth">
+                            <img src="venus.jpg" style="width:300px;height:200px;" />
+                            <div class="mask mask-1"></div>
+                            <div class="mask mask-2"></div>
+                            <div class="content">
+                                <h2>Venus</h2>
+                                <p>Venus has 90 times the atmospheric pressure of Earth</p>
 
+                            </div>
                         </div>
-                    </div>
-                </th>
-                <th>
-                    <div class="view view-ninth">
-                        <img src="jupitor.jpg" style="width:300px;height:200px;" />
-                        <div class="mask mask-1"></div>
-                        <div class="mask mask-2"></div>
-                        <div class="content">
-                            <h2>Jupitor</h2>
-                            <p>The Fastest Spinning Planet In The Solar System!!!</p>
+                    </th>
+                    <th>
+                        <div class="view view-ninth">
+                            <img src="jupitor.jpg" style="width:300px;height:200px;" />
+                            <div class="mask mask-1"></div>
+                            <div class="mask mask-2"></div>
+                            <div class="content">
+                                <h2>Jupitor</h2>
+                                <p>The Fastest Spinning Planet In The Solar System!!!</p>
 
+                            </div>
                         </div>
-                    </div>
-                </th>
-                <th>
-                    <div class="view view-ninth">
-                        <img src="saturn.jpg" style="width:300px;height:200px;" />
-                        <div class="mask mask-1"></div>
-                        <div class="mask mask-2"></div>
-                        <div class="content">
-                            <h2>Saturn</h2>
-                            <p>Saturn is the flattest planet.</p>
+                    </th>
+                    <th>
+                        <div class="view view-ninth">
+                            <img src="saturn.jpg" style="width:300px;height:200px;" />
+                            <div class="mask mask-1"></div>
+                            <div class="mask mask-2"></div>
+                            <div class="content">
+                                <h2>Saturn</h2>
+                                <p>Saturn is the flattest planet.</p>
 
+                            </div>
                         </div>
-                    </div>
-                </th>
-            </tr>
-            <tr>
-                <th>
-                    <div class="view view-ninth">
-                        <img src="Mercury.jpg" style="width:300px;height:200px;" />
-                        <div class="mask mask-1"></div>
-                        <div class="mask mask-2"></div>
-                        <div class="content">
-                            <h2>Mercury</h2>
-                            <p>A day on the surface of Mercury lasts 176 Earth days.</p>
+                    </th>
+                </tr>
+                <tr>
+                    <th>
+                        <div class="view view-ninth">
+                            <img src="Mercury.jpg" style="width:300px;height:200px;" />
+                            <div class="mask mask-1"></div>
+                            <div class="mask mask-2"></div>
+                            <div class="content">
+                                <h2>Mercury</h2>
+                                <p>A day on the surface of Mercury lasts 176 Earth days.</p>
 
+                            </div>
                         </div>
-                    </div>
-                </th>
-                <th>
-                    <div class="view view-ninth">
-                        <img src="mars.jpg" style="width:300px;height:200px;" />
-                        <div class="mask mask-1"></div>
-                        <div class="mask mask-2"></div>
-                        <div class="content">
-                            <h2>Mars</h2>
-                            <p>Its signature color come from Iron oxide. </p>
+                    </th>
+                    <th>
+                        <div class="view view-ninth">
+                            <img src="mars.jpg" style="width:300px;height:200px;" />
+                            <div class="mask mask-1"></div>
+                            <div class="mask mask-2"></div>
+                            <div class="content">
+                                <h2>Mars</h2>
+                                <p>Its signature color come from Iron oxide. </p>
 
+                            </div>
                         </div>
-                    </div>
-                </th>
-                <th>
-                    <div class="view view-ninth">
-                        <img src="uranus.jpg" style="width:300px;height:200px;" />
-                        <div class="mask mask-1"></div>
-                        <div class="mask mask-2"></div>
-                        <div class="content">
-                            <h2>Uranus</h2>
-                            <p>Uranus was discovered in 1781 by William Herschel.</p>
+                    </th>
+                    <th>
+                        <div class="view view-ninth">
+                            <img src="uranus.jpg" style="width:300px;height:200px;" />
+                            <div class="mask mask-1"></div>
+                            <div class="mask mask-2"></div>
+                            <div class="content">
+                                <h2>Uranus</h2>
+                                <p>Uranus was discovered in 1781 by William Herschel.</p>
 
+                            </div>
                         </div>
-                    </div>
-                </th>
-                <th>
-                    <div class="view view-ninth">
-                        <img src="neptune.jpg" style="width:300px;height:200px;" />
-                        <div class="mask mask-1"></div>
-                        <div class="mask mask-2"></div>
-                        <div class="content">
-                            <h2>Neptune</h2>
-                            <p>Neptune has the Strongest Winds in the Solar System</p>
+                    </th>
+                    <th>
+                        <div class="view view-ninth">
+                            <img src="neptune.jpg" style="width:300px;height:200px;" />
+                            <div class="mask mask-1"></div>
+                            <div class="mask mask-2"></div>
+                            <div class="content">
+                                <h2>Neptune</h2>
+                                <p>Neptune has the Strongest Winds in the Solar System</p>
 
+                            </div>
                         </div>
-                    </div>
-                </th>
-            </tr>
-        </table>
+                    </th>
+                </tr>
+            </table>
+        </div> -->
+        <div style="margin-left: 5.5%;">
+            <div class="view view-ninth">
+                <img src="earth.jpg" style="width:300px;height:200px;" />
+                <div class="mask mask-1"></div>
+                <div class="mask mask-2"></div>
+                <div class="content">
+                    <h2>Earth</h2>
+                    <p>The planet that we have lived</p>
+
+                </div>
+            </div>
+            <div class="view view-ninth">
+                <img src="venus.jpg" style="width:300px;height:200px;" />
+                <div class="mask mask-1"></div>
+                <div class="mask mask-2"></div>
+                <div class="content">
+                    <h2>Venus</h2>
+                    <p>Venus has 90 times the atmospheric pressure of Earth</p>
+
+                </div>
+            </div>
+            <div class="view view-ninth">
+                <img src="jupitor.jpg" style="width:300px;height:200px;" />
+                <div class="mask mask-1"></div>
+                <div class="mask mask-2"></div>
+                <div class="content">
+                    <h2>Jupitor</h2>
+                    <p>The Fastest Spinning Planet In The Solar System!!!</p>
+
+                </div>
+            </div>
+            <div class="view view-ninth">
+                <img src="saturn.jpg" style="width:300px;height:200px;" />
+                <div class="mask mask-1"></div>
+                <div class="mask mask-2"></div>
+                <div class="content">
+                    <h2>Saturn</h2>
+                    <p>Saturn is the flattest planet.</p>
+
+                </div>
+            </div>
+            <div class="view view-ninth">
+                <img src="Mercury.jpg" style="width:300px;height:200px;" />
+                <div class="mask mask-1"></div>
+                <div class="mask mask-2"></div>
+                <div class="content">
+                    <h2>Mercury</h2>
+                    <p>A day on the surface of Mercury lasts 176 Earth days.</p>
+
+                </div>
+            </div>
+            <div class="view view-ninth">
+                <img src="mars.jpg" style="width:300px;height:200px;" />
+                <div class="mask mask-1"></div>
+                <div class="mask mask-2"></div>
+                <div class="content">
+                    <h2>Mars</h2>
+                    <p>Its signature color come from Iron oxide. </p>
+
+                </div>
+            </div>
+            <div class="view view-ninth">
+                <img src="uranus.jpg" style="width:300px;height:200px;" />
+                <div class="mask mask-1"></div>
+                <div class="mask mask-2"></div>
+                <div class="content">
+                    <h2>Uranus</h2>
+                    <p>Uranus was discovered in 1781 by William Herschel.</p>
+
+                </div>
+            </div>
+            <div class="view view-ninth">
+                <img src="neptune.jpg" style="width:300px;height:200px;" />
+                <div class="mask mask-1"></div>
+                <div class="mask mask-2"></div>
+                <div class="content">
+                    <h2>Neptune</h2>
+                    <p>Neptune has the Strongest Winds in the Solar System</p>
+
+                </div>
+            </div>
+        </div>
     </center>
 </body>
 
